--- a/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
@@ -52,7 +52,7 @@
                     </HBox>
                 </graphic>
             </Button>
-            <Button minHeight="48" minWidth="280" onMouseClicked="#handleChatPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
+            <Button fx:id="chatButton" minHeight="48" minWidth="280" onMouseClicked="#handleChatPress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
                         <padding>
