--- a/src/main/resources/it/polimi/ingsw/gc28/gui/components/inGame/messageChat.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/components/inGame/messageChat.fxml
@@ -18,9 +18,9 @@
         <Text fx:id="playerName" style="-fx-font-size: 14"/>
         <Region HBox.hgrow="ALWAYS"/>
     </HBox>
-    <HBox>
-        <Region HBox.hgrow="ALWAYS"/>
+    <HBox alignment="BOTTOM_LEFT">
         <Text fx:id="message" style="-fx-font-size: 14;-fx-background-color: #424242"/>
+        <Region HBox.hgrow="ALWAYS"/>
     </HBox>
     <HBox alignment="TOP_RIGHT">
         <Region HBox.hgrow="ALWAYS"/>
