--- a/src/main/resources/it/polimi/ingsw/gc28/gui/components/inGame/messageChat.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/components/inGame/messageChat.fxml
@@ -11,6 +11,7 @@
 <fx:root xmlns="http://javafx.com/javafx"
          xmlns:fx="http://javafx.com/fxml"
          type="javafx.scene.layout.VBox">
+    <VBox fx:id="boxMessage">
     <padding>
         <Insets top="16" right="16" bottom="16" left="16"/>
     </padding>
@@ -26,4 +27,5 @@
         <Region HBox.hgrow="ALWAYS"/>
         <Text fx:id="time" style="-fx-font-size: 10;-fx-background-color: #424242"/>
     </HBox>
+</VBox>
 </fx:root>
