--- a/src/main/resources/it/polimi/ingsw/gc28/gui/components/inGame/scoreboard.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/components/inGame/scoreboard.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.layout.HBox?>
 <fx:root type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-    <AnchorPane fx:id="anchor" VBox.vgrow="ALWAYS">
-            <ImageView fx:id="scoreboard" fitHeight="480.0" fitWidth="760.0" pickOnBounds="true" preserveRatio="true">
+    <HBox fx:id="wrapBox" VBox.vgrow="ALWAYS" alignment="CENTER">
+        <AnchorPane fx:id="anchor">
+            <ImageView fx:id="scoreboard" fitWidth="280" pickOnBounds="true" preserveRatio="true">
             </ImageView>
-    </AnchorPane>
+        </AnchorPane>
+    </HBox>
 </fx:root>
