--- a/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
+++ b/src/main/resources/it/polimi/ingsw/gc28/gui/inGame.fxml
@@ -21,7 +21,7 @@
         <padding>
             <Insets bottom="16" left="32" right="32" top="32" />
         </padding>
-        <VBox spacing="16">
+        <VBox fx:id="buttonWrapper" spacing="16">
             <Button minHeight="48" minWidth="280" onMouseClicked="#handleTablePress" style="-fx-background-color: #484848;-fx-background-radius: 16;">
                 <graphic>
                     <HBox alignment="CENTER" spacing="10">
